fixed spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1361,6 +1361,10 @@ margin-right: 1.6rem;
       header{
         padding-top: 1rem;
       }
+      .jumbo h1{
+        margin-top: 12rem;
+        /* font-family: 'Inter', sans-serif; */
+      }
       /* .jumbo{
         margin-top: 4rem;
       } */
